# contextmg

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
docs/: API_REFERENCE.md  ARCHITECTURE.md  COMMUNITY.md  DEVELOPMENT.md  EXAMPLES.md  GETTING_STARTED.md  ROADMAP.md  index.md
src/contextforge/: base.py  engine.py
src/contextforge/integration/: __init__.py
src/contextmg/: __init__.py  base.py  engine.py
src/contextmg/integration/: __init__.py
tests/: __init__.py  test_engine.py
