[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contextmg"
version = "0.1.0"
description = "A declarative, fine-grained automated context engineering framework for LLMs."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "langchain-core>=0.1.0",
    "tiktoken>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "google-genai>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/contextforge"]
